version 1.2
- deducorrect object gains 'call' attribute.
- Update vignette describes new 'editset' functionality
- deduImpute accepts 'editset'. Imputations causing new violations are reverted afterwards
- correctRounding, correctTypos, correctSigns now S3 generic and accept 'editset'. Corrections causing new violations are reverted afterwards.
- deduImpute now accepts data.frames with more variables than specified in editset (-matrix, -array)
- bugfix: counting nr. of imputations in deduImpute.editmatrix in presence of 'adapt' argument
- BREAKING CHANGE: Removed deprecated argument 'Q' from 'correctRounding'
- BREAKING CHANGE: Argument 'R' of correctRounding is renamed 'E' for consistency reasons 


version 1.1-3
- Solved problem in vignette, caused by updates in editrules.

version 1.1-2
- Discussion paper included in 'doc' directory of package
- Solved bug in deducorrect object: rownames of $corrections were sometimes duplicated

version 1.1-1
- Updates on vignette, index.html of online manual and documentation.
- Solved possible clash with plyr: both editrules and plyr publish a reduce function.

version 1.1-0
- Deductive imputation methods for categorical data: deduImpute, deductiveLevels
- Deductive imputation methods for numerical records: deduImpute, solSpace/imputess, deductiveZeros
- Solved corner case: constructing deducorrect object when nothing was corrected failed.

version 1.0-2
- correctSigns has more thorough argument checking. Variables in flip or swap, not occuring in rules are removed.
- Test for unimodularity of editmatrix in correctRounding can optionally be turned off.
- fixed a bug in correctRounding causing inequality violations in certain cases (Thanks to Kenneth Chin-A-Fat)
- passing argument Q to correctRoundings now emits error

version 1.0-1
- fixed bug in correctSigns causing inequality violations in certain cases.

version 1.0-0
- discussion paper published and added to package documentation

version 0.9-6